--- a/app/src/main/res/layout/events_item.xml
+++ b/app/src/main/res/layout/events_item.xml
@@ -29,8 +29,7 @@
                 android:layout_width="wrap_content"
                 android:text="Pulse Rate:"
                 android:layout_marginStart="10dp"
-                android:textSize="30dp"
-                android:textStyle="bold"
+                android:textSize="25dp"
                 android:layout_marginLeft="10dp"
                 android:drawableStart="@drawable/heart_rate_ico_three"
                 android:drawableLeft="@drawable/heart_rate_ico_three" />
@@ -59,9 +58,8 @@
                 android:id="@+id/temp_rate_title"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:text="Body Temperature:"
+                android:text="Temperature:"
                 android:layout_marginStart="5dp"
-                android:textStyle="bold"
                 android:textSize="25dp"
                 android:layout_marginLeft="5dp"
                 android:drawableStart="@drawable/temperature_ico_one"
