--- a/app/src/main/res/layout/activity_tracked_entity_instances.xml
+++ b/app/src/main/res/layout/activity_tracked_entity_instances.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.TrackedEntityInstancesActivity">
+    tools:context=".ui.OrgUnitsActivity">
 
     <include layout="@layout/toolbar" />
 
