--- a/app/src/main/res/layout/data_elements_item.xml
+++ b/app/src/main/res/layout/data_elements_item.xml
@@ -6,8 +6,8 @@
     android:id="@+id/data_element_card"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         >
 
@@ -24,16 +24,13 @@
         <ImageView
             android:layout_width="81dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="250dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="300dp"
+            android:layout_marginLeft="300dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:src="@drawable/ic_chevron_right" />
 
-    </LinearLayout>
-
-
-
+    </RelativeLayout>
 
 
 
