--- a/app/src/main/res/layout/program_stages_item.xml
+++ b/app/src/main/res/layout/program_stages_item.xml
@@ -3,16 +3,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/program_stage_card"
+    android:id="@+id/data_element_card"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         >
 
         <TextView
-            android:id="@+id/program_stage"
+            android:id="@+id/program_stages"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:text="Data Element"
@@ -22,19 +22,15 @@
             android:layout_marginLeft="10dp" />
 
         <ImageView
-            android:id="@+id/program_stage_image"
             android:layout_width="81dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="250dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="300dp"
+            android:layout_marginLeft="300dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:src="@drawable/ic_chevron_right" />
 
-    </LinearLayout>
-
-
-
+    </RelativeLayout>
 
 
 
