--- a/app/src/main/res/layout/programs_item.xml
+++ b/app/src/main/res/layout/programs_item.xml
@@ -3,19 +3,19 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/programs_card"
+    android:id="@+id/data_element_card"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="80dp"
         >
 
         <TextView
-            android:id="@+id/program"
+            android:id="@+id/programs"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="Program"
+            android:text="Data Element"
             android:layout_marginStart="10dp"
             android:layout_marginTop="28dp"
             android:textStyle="bold"
@@ -24,13 +24,15 @@
         <ImageView
             android:layout_width="81dp"
             android:layout_height="match_parent"
-            android:layout_marginStart="250dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="300dp"
+            android:layout_marginLeft="300dp"
             android:layout_marginEnd="0dp"
             android:layout_marginRight="0dp"
             android:src="@drawable/ic_chevron_right" />
 
-    </LinearLayout>
+    </RelativeLayout>
+
+
 
     <View
         android:layout_width="fill_parent"
